nst/src/snapshots/transmute_nst__implicit_ret_converter__tests__array.snap
---
source: nst/src/implicit_ret_converter.rs
expression: w
---
let f(): number = {
  let a = [1, 2, 4,];
  ret 5;
}
