nst/src/snapshots/transmute_nst__implicit_ret_converter__tests__array_access_ret.snap
---
source: nst/src/implicit_ret_converter.rs
expression: w
---
let f() = {
  a[if true {
    ret 1;
  }
  else {
    ret 2;
  }]
}
