nst/src/snapshots/transmute_nst__implicit_ret_converter__tests__if_condition_returns.snap
---
source: nst/src/implicit_ret_converter.rs
expression: w
---
if if true {
  ret 42;
}
else {
  ret 43;
} {
}
