nst/src/snapshots/transmute_nst__implicit_ret_converter__tests__if_empty_branches.snap
---
source: nst/src/implicit_ret_converter.rs
expression: w
---
let f() = {
  ret if true {
  }
  else {
  };
}
