nst/src/snapshots/transmute_nst__implicit_ret_converter__tests__implicit_return_after_statement.snap
---
source: nst/src/implicit_ret_converter.rs
expression: w
---
let f(n: number) = {
  let a = 1;
  ret ;
}
