nst/src/snapshots/transmute_nst__implicit_ret_converter__tests__implicit_return_if.snap
---
source: nst/src/implicit_ret_converter.rs
expression: w
---
let f(): number = {
  if c {
    42;
  }
  ret 43;
}
