nst/src/snapshots/transmute_nst__implicit_ret_converter__tests__implicit_return_if_full_with_explicit.snap
---
source: nst/src/implicit_ret_converter.rs
expression: w
---
let f(): number = {
  ret if c {
    ret 42;
  }
  else {
    43;
  };
}
