nst/src/snapshots/transmute_nst__implicit_ret_converter__tests__implicit_return_simple.snap
---
source: nst/src/implicit_ret_converter.rs
expression: w
---
let f(): number = {
  41;
  ret 42;
}
