nst/src/snapshots/transmute_nst__implicit_ret_converter__tests__namespace.snap
---
source: nst/src/implicit_ret_converter.rs
expression: w
---
namespace name {
  let f(): number = {
    ret 1;
  }
}
